# langgraph-a2a

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  test_interop.py  test_local.py
deploy.example/: deployment.yaml  ingress.yaml  service.yaml
samples/: sample_request.json
src/a2a_agent/: __main__.py  a2a_server.py  config.py  executor.py  graph.py  llm.py  state.py  tracing.py
tests/: conftest.py  test_a2a_roundtrip.py  test_config.py  test_executor.py  test_graph.py  test_graph_invoke.py  test_llm.py  test_server.py  test_state.py  test_tracing.py
