[project]
name = "langgraph-a2a"
version = "0.1.0"
description = "A2A-compliant LangGraph agent template — clone and fork for new agents"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.1.0,<3",
    "openai>=1.0.0,<3",
    "a2a-sdk[all]>=1.0.0,<3",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0.0,<3",
    "langfuse>=3.0.0,<6",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a2a_agent"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
